--- a/WMS_Lantech/Model/Model.csproj
+++ b/WMS_Lantech/Model/Model.csproj
@@ -66,6 +66,8 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchParam\BaseParam.cs" />
+    <Compile Include="SearchParam\UserInfoParam.cs" />
     <Compile Include="UserInfo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
